--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         Pune, Maharashtra ·
                         <a href="mailto:tengetolmadhav@gmail.com">tengetolmadhav@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5">Full Stack Developer with 2.6 years of hands-on experience, specializing in creating robust and scalable web solutions. Proficient in front-end technologies such as HTML, CSS, and JavaScript, frameworks like Angular, with expertise in back-end frameworks like Node.js, Express, and ASP.NET. Adept at translating client needs into efficient code, with a track record of delivering high-quality projects on time. Excited about leveraging my skills to contribute to innovative and impactful developments in the tech landscape</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/madhav-tengetol-1b1b501b9"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/Madhav15303"><i class="fab fa-github"></i></a>
