--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         Pune, Maharashtra ·
                         <a href="mailto:tengetolmadhav@gmail.com">tengetolmadhav@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">Full Stack Developer with 2.6 years of hands-on experience, specializing in creating robust and scalable web solutions. Proficient in front-end technologies such as HTML, CSS, and JavaScript, frameworks like Angular, with expertise in back-end frameworks like Node.js, Express, and ASP.NET. Adept at translating client needs into efficient code, with a track record of delivering high-quality projects on time. Excited about leveraging my skills to contribute to innovative and impactful developments in the tech landscape</p>
+                    <p class="lead mb-5">Full Stack Developer with 3 years of hands-on experience, specializing in creating robust and scalable web solutions. Proficient in front-end technologies such as HTML, CSS, and JavaScript, TypeScript, frameworks like Angular, with expertise in back-end frameworks like ASP.NET Core. Adept at translating client needs into efficient code, with a track record of delivering high-quality projects on time. Excited about leveraging my skills to contribute to innovative and impactful developments in the tech landscape</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/madhav-tengetol-1b1b501b9"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/Madhav15303"><i class="fab fa-github"></i></a>
@@ -127,7 +127,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a full stack developer, I enjoy most of my time by playing mobile games.</p>
+                    <p>Apart from being a full stack developer, learning new programming language and I enjoy most of my time by playing mobile games.</p>
                     <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the full stack development world.</p>
                 </div>
             </section>
